[metadata]
name = pnu-pipinfo
description = Alternative tool for listing Python packages
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.9.4
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = hubert.tournier@gmail.com
url = https://github.com/HubTou/pipinfo/
project_urls =
    Bug Tracker = https://github.com/HubTou/pipinfo/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4[html5lib]
    bs4
    colorama
    packaging
    pnu-libpnu
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pipinfo = pipinfo:main
    pipin = pipinfo:main
    pippin = pipinfo:main

[options.data_files]
man/man1 =
    man/pipinfo.1.gz

